# _bzl_go_mod

./: .bazelversion  .gazelle.yaml  .gazelleignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  go.work  go.work.sum  go_mod.bzl  go_mod_gazelle_integration_test.sh  go_mod_script.sh
.github/workflows/: bazel-ci.yml
cmd/app/: BUILD.bazel  main.go
gazelle_language/go_mod/: BUILD.bazel  README.md  go.mod  go_mod.go  go_mod_test.go  integration_test.sh
gazelle_language/go_mod/testdata/: BUILD.bazel
gazelle_language/go_mod/testdata/mod1/: root.go
gazelle_language/go_mod/testdata/mod1/pkg1/: pkg1.go
gazelle_language/go_mod/testdata/mod1/pkg2/: BUILD.bazel
gazelle_language/go_mod/testdata/mod2/: BUILD.bazel
gazelle_language/go_mod/testdata/mod2/pkg3/: BUILD.bazel  pkg3.go
gazelle_language/go_mod/testdata/mod3/: BUILD.bazel  go.mod  go.sum  root.go
go_mod/: BUILD.bazel  go_mod.go  go_mod_test.go
go_modlang/: BUILD.bazel  go_modlang.go  go_modlang_test.go
models/: user_test.go
rules/go_mod/: BUILD.bazel  go_mod.bzl  go_mod_script.sh  go_mod_test.sh
rules/go_mod/testdata/: BUILD.bazel  go.mod
rules/go_mod/testdata/cdeps/: BUILD.bazel  foo.c  foo.go  foo.h
rules/go_mod/testdata/cmd/app/: BUILD.bazel
rules/go_mod/testdata/embedfs/: BUILD.bazel  data.txt
rules/go_mod/testdata/models/: BUILD.bazel  user.go
rules/go_mod/testdata/utils/: BUILD.bazel
testdata/: BUILD.bazel  go.mod  go_mod_gazelle_integration_test.sh  go_mod_test.sh
testdata/cdeps/: BUILD.bazel  foo.go
testdata/cmd/app/: BUILD.bazel
testdata/embedfs/: BUILD.bazel  embedfs.go
testdata/gazelle_go_mod/: BUILD.bazel
testdata/gazelle_go_mod/mod1/: BUILD.bazel  go.mod  root.go
testdata/gazelle_go_mod/mod1/pkg1/: BUILD.bazel
testdata/gazelle_go_mod/mod1/pkg2/: BUILD.bazel  pkg2.go
testdata/gazelle_go_mod/mod2/: BUILD.bazel  go.mod  root.go
testdata/gazelle_go_mod/mod2/pkg3/: BUILD.bazel
testdata/models/: BUILD.bazel
testdata/utils/: BUILD.bazel  utils.go
utils/: BUILD.bazel  utils_test.go
