load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("//rules/go_mod:go_mod.bzl", "go_mod")

# gazelle:exclude testdata/*.bazel
# gazelle:exclude testdata/**/*
#
gazelle_binary(
    name = "gazelle_with_go_mod",
    languages = [
        "@gazelle//language/go",
        "@gazelle//language/proto",
        "//gazelle_language/go_mod:go_mod",
    ],
    visibility = ["//visibility:public"],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_with_go_mod",
)

go_mod(
    name = "bazel_go_mod.go_mod",
    go_mod = ":go.mod",
    go_sum = ":go.sum",
    module_path = "github.com/stefanpenner/bazel_go_mod",
    deps = [],
)
