load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_with_go_mod",
    languages = [
        "@gazelle//language/go",
        "@gazelle//language/proto",
        "//gazelle_language/go_mod:go_mod",
    ],
    visibility = ["//visibility:public"],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_with_go_mod",
)
