load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_modlang",
    srcs = ["go_modlang.go"],
    importpath = "github.com/stefanpenner/bazel_go_mod/go_modlang",
    visibility = ["//visibility:public"],
    deps = [
        "@gazelle//config:go_default_library",
        "@gazelle//label:go_default_library",
        "@gazelle//language:go_default_library",
        "@gazelle//repo:go_default_library",
        "@gazelle//resolve:go_default_library",
        "@gazelle//rule:go_default_library",
    ],
)

go_test(
    name = "go_modlang_test",
    srcs = ["go_modlang_test.go"],
    embed = [":go_modlang"],
)


