load("//:go_mod.bzl", "go_mod")

# go_mod target for testing
go_mod(
    name = "testdata.go_mod",
    go_mod = "//testdata:go.mod",
    go_sum = "//testdata:go.sum",
    importpath = "github.com/stefanpenner/bazel_go_mod",
    module_path = "github.com/stefanpenner/bazel_go_mod",
    deps = [],
)

# sh_test for go_mod rule
sh_test(
    name = "go_mod_test",
    srcs = ["go_mod_test.sh"],
    args = ["$(rootpath :testdata.go_mod)"],
    data = [":testdata.go_mod"],
)

sh_test(
    name = "go_mod_gazelle_integration_test",
    srcs = ["go_mod_gazelle_integration_test.sh"],
    data = [
        "//:gazelle_with_go_mod",
        "//testdata/gazelle_go_mod:all_files",
    ],
    env = {
        "GAZELLE_BIN": "$(location //:gazelle_with_go_mod)",
    },
)
