load("//:go_mod.bzl", "go_mod")

# go_mod target for testing
go_mod(
    name = "testdata.go_mod",
    go_mod = "//testdata:go.mod",
    go_sum = "//testdata:go.sum",
    module_path = "github.com/stefanpenner/bazel_go_mod",
    deps = [
        "//testdata/models:models",
        "//testdata/utils:utils",
        "//testdata/cmd/app:app_lib",
        "//testdata/embedfs:embedfs",
        "//testdata/cdeps:cdeps",
    ],
    visibility = ["//visibility:public"],
)

exports_files([
    "go_mod_test.sh",
    "go_mod_gazelle_integration_test.sh",
])