load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "app_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner/bazel_go_mod/cmd/app",
    visibility = ["//visibility:private"],
    deps = [
        "//models",
        "//utils",
    ],
)

go_binary(
    name = "app",
    embed = [":app_lib"],
    visibility = ["//visibility:public"],
)
