# Make the script file available
exports_files([
    "go_mod_script.sh",
    "go_mod_test.sh",
])

# gazelle:resolve go github.com/stefanpenner/bazel_go_mod/models //rules/go_mod/testdata/models:models
# gazelle:resolve go github.com/stefanpenner/bazel_go_mod/utils //rules/go_mod/testdata/utils:utils

# sh_test for go_mod rule
sh_test(
    name = "go_mod_test",
    srcs = [":go_mod_test.sh"],
    args = ["$(rootpath //rules/go_mod/testdata:go_mod_dir)"],
    data = ["//rules/go_mod/testdata:go_mod_dir"],
)
