load("@rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "models_test",
    srcs = ["user_test.go"],
    embed = [":models"],
    deps = ["@com_github_google_uuid//:go_default_library"],
)

go_library(
    name = "models",
    srcs = ["user.go"],
    importpath = "github.com/stefanpenner/bazel_go_mod/testdata/models",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_uuid//:go_default_library"],
)
