load("//rules/go_mod:go_mod.bzl", "go_mod")

exports_files(
    [
        "BUILD.bazel",
        "go.mod",
        "go.sum",
    ],
    visibility = ["//visibility:public"],
)

go_mod(
    name = "go_mod_dir",
    go_mod = ":go.mod",
    go_sum = ":go.sum",
    module_path = "github.com/stefanpenner/bazel_go_mod",
    deps = [
        "//rules/go_mod/testdata/cmd/app:app_lib",
        "//rules/go_mod/testdata/embedfs",
        "//rules/go_mod/testdata/models",
        "//rules/go_mod/testdata/utils",
    ],
)
