load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cdeps",
    srcs = [
        "foo.go",
        "foo.c",
        "foo.h",
    ],
    importpath = "github.com/stefanpenner/bazel_go_mod/cdeps",
    cgo = True,
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "BUILD.bazel",
        "foo.c",
        "foo.go",
        "foo.h",
    ],
    visibility = ["//visibility:public"],
)

