load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "embedfs",
    srcs = ["embedfs.go"],
    data = ["data.txt"],
    importpath = "github.com/stefanpenner/bazel_go_mod/embedfs",
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "BUILD.bazel",
        "data.txt",
        "embedfs.go",
    ],
    visibility = ["//visibility:public"],
)

