load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = ["utils.go"],
    importpath = "github.com/stefanpenner/bazel_go_mod/utils",
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "BUILD.bazel",
        "utils.go",
        "utils_test.go",
    ],
    visibility = ["//visibility:public"],
)

