load("@rules_go//go:def.bzl", "go_library")

exports_files(["BUILD.bazel", "pkg2.go"], visibility = ["//visibility:public"])

go_library(
    name = "pkg2",
    srcs = ["pkg2.go"],
    importpath = "github.com/stefanpenner/bazel_go_mod/testdata/gazelle_go_mod/mod1/pkg2",
    visibility = ["//visibility:public"],
)
