load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "app_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner/bazel_go_mod/cmd/app",
    deps = [
        "//rules/go_mod/testdata/models",
        "//rules/go_mod/testdata/utils",
    ],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "app",
    embed = [":app_lib"],
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "BUILD.bazel",
        "main.go",
    ],
    visibility = ["//visibility:public"],
)

