load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:resolve go github.com/stefanpenner/bazel_go_mod/models //rules/go_mod/testdata/models:models
# gazelle:resolve go github.com/stefanpenner/bazel_go_mod/utils //rules/go_mod/testdata/utils:utils

go_library(
    name = "app_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner/bazel_go_mod/cmd/app",
    visibility = ["//visibility:public"],
    deps = [
        "//rules/go_mod/testdata/models",
        "//rules/go_mod/testdata/utils",
    ],
)

go_binary(
    name = "app",
    embed = [":app_lib"],
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "BUILD.bazel",
        "main.go",
    ],
    visibility = ["//visibility:public"],
)
